Bug #1513 - Sidebar slightly too high on group profile sidebar

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1286,7 +1286,7 @@ body{
             &.top-sidebar-header{
                 margin-top: 20px;
                 &.group-single{
-                    margin-top: 14px;
+                    margin-top: 21px;
                 }
             }
         }
